# full-django-react-event-app

./: .gitignore  README.md  docker-compose.yml
backend/: .env  .gitignore  Dockerfile  pyproject.toml  start.sh
backend/backend/: constants.py  handlers.py  settings.py  urls.py
backend/base_auth/: apps.py  authentication.py  jwt.py  manager.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/base_auth/migrations/: 0001_initial.py  0002_alter_blacklisttoken_expire.py
backend/event/: admin.py  helpers.py  models.py  serializers.py  urls.py  views.py
backend/event/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  constants.ts  index.tsx
frontend/src/api/: axios.js  urls.js
frontend/src/assets/css/: paginate.css
frontend/src/components/: paginate.tsx  scroll-up-button.tsx  search-bar.tsx  theme-toggle.tsx
frontend/src/components/alerts/: error-alert.tsx
frontend/src/components/clubs/: club-card.tsx  clubs-grid.tsx
frontend/src/components/header/: header-link.tsx  header.tsx
frontend/src/components/modals/: login-modal.tsx  register-modal.tsx
frontend/src/hooks/: use-axios.ts  use-clubs.ts  use-refresh-token.ts  use-scroll.ts  use-user.ts
frontend/src/layouts/: Layout.tsx
frontend/src/pages/: clubs.tsx
frontend/src/store/: auth-context.tsx  auth-modal-context.tsx  login-context.tsx  theme-context.tsx
frontend/src/types/: auth.ts  club.ts  event.ts  props.ts  query.ts  user.ts
nginx/: default.conf
